# Speechmate

./: HACKATHON_SURVIVAL_GUIDE.md  MENTOR_QUESTIONS.md  README.md  RELEASE_NOTES.md  VIDEO_SCRIPT.md  analyze_duplicates.ps1  architecture_diagram.md  clean_dictionary.js  clean_dictionary.ps1  clean_dictionary.py  duplicate_analysis.txt  pubspec.yaml
.GitHub/workflow/: dart.yml
.github/workflows/: dart.yml  flutter-build.yml  main.yml
android/: build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
android/app/: build.gradle  build.gradle.kts  google-services.json
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/app/src/main/cpp/whisper/: ggml-backend-impl.h  ggml-common.h  ggml-cpp.h  ggml-cpu.h  ggml-impl.h  ggml-threading.h  gguf.h  whisper-arch.h
android/app/src/main/cpp/whisper/ggml-cpu/: ggml-cpu-aarch64.cpp  ggml-cpu-hbm.cpp  ggml-cpu-impl.h  ggml-cpu.c  ggml-cpu.cpp
assets/data/: dictionary.json  dictionary_backup.json  dictionary_nature.json  dictionary_numbers.json  dictionary_phrases.json
docs/: pitch_script.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/core/: app_colors.dart  app_theme.dart
lib/models/: community_post.dart  lesson_models.dart
lib/screens/: about_screen.dart  animals_page.dart  app_language_select.dart  beta_chat_screen.dart  chat_translate_screen.dart  colors_page.dart  common_phrases_screen.dart  community_screen.dart  culture_screen.dart  emotional_splash_screen.dart  family_page.dart  languages.dart  (+19 more)
test/: widget_test.dart
(+50 files in other folders)
